--- a/zenkoji.html
+++ b/zenkoji.html
@@ -112,7 +112,7 @@
         window.addEventListener('load', onVrViewLoad)
         function onVrViewLoad() {
             var vrView = new VRView.Player('#vrview', {
-                image: 'nagano360.netlify.com/image/zenkoji/zenkoji_flat.jpg', //画像を埋め込みたい場合。値にパスを指定。
+                image: 'image/zenkoji/zenkoji_flat.jpg', //画像を埋め込みたい場合。値にパスを指定。
                 width: '100%', //コンテンツの幅を指定。
                 height: '100%', //コンテンツの高さを指定。
             });
