--- a/zenkoji.html
+++ b/zenkoji.html
@@ -115,6 +115,7 @@
                 image: 'image/zenkoji/zenkoji_flat.jpg', //画像を埋め込みたい場合。値にパスを指定。
                 width: '100%', //コンテンツの幅を指定。
                 height: '100%', //コンテンツの高さを指定。
+                is_stereo: true,
             });
         }
     </script>
