--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
                     <li class="gnavMenuItem"><a href="index.html">TOP</a></li>
                     <li class="gnavMenuItem"><a href="">概要</a></li>
                     <li class="gnavMenuItem"><a href="">目次</a></li>
-                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">戸隠神社奥社</a></li>
                     <li class="gnavMenuItem gnavMenuItemLower"><a href="zenkoji.html">善光寺</a></li>
+                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">戸隠神社奥社</a></li>
+                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">上田城跡公園</a></li>
+                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">軽井沢アウトレット</a></li>
                     <li class="gnavMenuItem gnavMenuItemLower"><a href="">長野駅</a></li>
                 </ul>
             </div><!--gnav-wrap-->
@@ -54,16 +56,16 @@
         <div class="cardContainer">
 			<a href="#" class="cardWrap">
 				<div class="card">
-					<img src="image/top/okusyaToc.png" alt="#">
-					<h2>戸隠神社奥社</h2>
-					<h3>Togakushi Shrine Okusha</h3>
-				</div>
-			</a>
-			<a href="#" class="cardWrap">
-				<div class="card">
 					<img src="image/top/zenkojiToc.png" alt="#">
 					<h2>善光寺</h2>
 					<h3>Zenkoji Temple</h3>
+				</div>
+            </a>
+            <a href="#" class="cardWrap">
+				<div class="card">
+					<img src="image/top/okusyaToc.png" alt="#">
+					<h2>戸隠神社奥社</h2>
+					<h3>Togakushi Shrine Okusha</h3>
 				</div>
 			</a>
 			<a href="#" class="cardWrap">
@@ -72,9 +74,22 @@
 					<h2>長野駅</h2>
 					<h3>Nagano Station</h3>
 				</div>
+            </a>
+            <a href="#" class="cardWrap">
+				<div class="card">
+					<img src="image/top/naganoToc.png" alt="#">
+					<h2>長野駅</h2>
+					<h3>Nagano Station</h3>
+				</div>
+            </a>
+            <a href="#" class="cardWrap">
+				<div class="card">
+					<img src="image/top/naganoToc.png" alt="#">
+					<h2>長野駅</h2>
+					<h3>Nagano Station</h3>
+				</div>
 			</a>
         </div>
-            <a href="" class="tocBtn">もっとみる</a>
         </div>
     </section>
 
