--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="sectionContentWrap">
 		<h1>目次</h1>
         <div class="cardContainer">
-			<a href="#" class="cardWrap">
+			<a href="zenkoji.html" class="cardWrap">
 				<div class="card">
 					<img src="image/top/zenkojiToc.png" alt="#">
 					<h2>善光寺</h2>
