--- a/zenkoji.html
+++ b/zenkoji.html
@@ -60,7 +60,8 @@
     <section class="panoramicImage">
         <div class="sectionContentWrap">
             <h1>パノラマ画像</h1>
-            <div id="vrview"></div>
+            <!--<div id="vrview"></div>-->
+            <iframe width=”100%” height=”400″ src=”//googlevrview/index.html?image=//image/zenkoji/zenkojiFlat.jpg?is_stereo=false”></iframe>
         </div>
     </section>
 
@@ -106,12 +107,13 @@
 	</footer>
 
     <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="//storage.googleapis.com/vrview/2.0/build/vrview.min.js"></script>
     <script>
         $('.menu').on('click',function(){
             $('.menuLine').toggleClass('active');
             $('.gnav').fadeToggle();
         });
-        window.addEventListener('load', onVrViewLoad)
+        window.addEventListener('load', onVrViewLoad);
         function onVrViewLoad() {
             var vrView = new VRView.Player('#vrview', {
                 image: './image/zenkoji/zenkojiFlat.jpg', //画像を埋め込みたい場合。値にパスを指定。
@@ -120,6 +122,5 @@
             });
         }
     </script>
-    <script src="//storage.googleapis.com/vrview/2.0/build/vrview.min.js"></script>
 </body>
 </html>
