--- a/zenkoji.html
+++ b/zenkoji.html
@@ -60,8 +60,7 @@
     <section class="panoramicImage">
         <div class="sectionContentWrap">
             <h1>パノラマ画像</h1>
-            <!--<div id="vrview"></div>-->
-            <iframe width=”100%” height=”400″ src=”//googlevrview/index.html?image=//image/zenkoji/zenkojiFlat.jpg?is_stereo=false”></iframe>
+            <div id="vrview"></div>
         </div>
     </section>
 
