--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#7BA23F">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>nagano360</title>
     <link rel="stylesheet" href="css/style.css">
@@ -29,12 +30,11 @@
                 <ul class="gnavMenu">
                     <li class="gnavMenuItem"><a href="index.html">TOP</a></li>
                     <li class="gnavMenuItem"><a href="">概要</a></li>
-                    <li class="gnavMenuItem"><a href="">目次</a></li>
                     <li class="gnavMenuItem gnavMenuItemLower"><a href="zenkoji.html">善光寺</a></li>
-                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">戸隠神社奥社</a></li>
-                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">上田城跡公園</a></li>
-                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">軽井沢アウトレット</a></li>
-                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">長野駅</a></li>
+                    <li class="gnavMenuItem gnavMenuItemLower"><a href="togakushi.html">戸隠神社奥社</a></li>
+                    <li class="gnavMenuItem gnavMenuItemLower"><a href="ueda.html">上田城跡公園</a></li>
+                    <li class="gnavMenuItem gnavMenuItemLower"><a href="karuizawa.html">軽井沢アウトレット</a></li>
+                    <li class="gnavMenuItem gnavMenuItemLower"><a href="naganoeki.html">長野駅</a></li>
                 </ul>
             </div><!--gnav-wrap-->
         </nav>
@@ -52,43 +52,52 @@
 
     <section class="toc indexSection">
         <div class="sectionContentWrap">
-		<h1>目次</h1>
+        <h1>目次</h1>
+        <div class="cardContainerWrap">
         <div class="cardContainer">
 			<a href="zenkoji.html" class="cardWrap">
 				<div class="card">
-					<img src="image/top/zenkojiToc.png" alt="#">
+					<img src="image/top/zenkojiToc.jpg" alt="#">
 					<h2>善光寺</h2>
 					<h3>Zenkoji Temple</h3>
 				</div>
             </a>
-            <a href="#" class="cardWrap">
+            <a href="togakushi.html" class="cardWrap">
 				<div class="card">
-					<img src="image/top/okusyaToc.png" alt="#">
+					<img src="image/top/okusyaToc.jpg" alt="#">
 					<h2>戸隠神社奥社</h2>
 					<h3>Togakushi Shrine Okusha</h3>
 				</div>
 			</a>
-			<a href="#" class="cardWrap">
+			<a href="ueda.html" class="cardWrap">
 				<div class="card">
-					<img src="image/top/naganoToc.png" alt="#">
+					<img src="image/top/uedaToc.jpg" alt="#">
+					<h2>上田城跡地公園</h2>
+					<h3>Uedajo Castle Site Park</h3>
+				</div>
+            </a>
+            <a href="karuizawa.html" class="cardWrap">
+				<div class="card">
+					<img src="image/top/karuizawaToc.jpg" alt="#">
+					<h2>軽井沢アウトレット</h2>
+					<h3>Karuizawa Outlet</h3>
+				</div>
+            </a>
+            <a href="naganoeki.html" class="cardWrap">
+				<div class="card">
+					<img src="image/top/naganoToc.jpg" alt="#">
 					<h2>長野駅</h2>
 					<h3>Nagano Station</h3>
 				</div>
             </a>
-            <a href="#" class="cardWrap">
+            <a href="https://suzuri.jp/nagano360" class="cardWrap">
 				<div class="card">
-					<img src="image/top/naganoToc.png" alt="#">
-					<h2>長野駅</h2>
-					<h3>Nagano Station</h3>
-				</div>
-            </a>
-            <a href="#" class="cardWrap">
-				<div class="card">
-					<img src="image/top/naganoToc.png" alt="#">
-					<h2>長野駅</h2>
-					<h3>Nagano Station</h3>
+					<img src="image/top/goodsToc.jpg" alt="#">
+					<h2>nagano360 - 公式グッズ</h2>
+					<h3>official goods</h3>
 				</div>
 			</a>
+        </div>
         </div>
         </div>
     </section>
