--- a/zenkoji.html
+++ b/zenkoji.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#7BA23F">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>善光寺 | nagano360</title>
     <link rel="stylesheet" href="css/style.css">
@@ -27,17 +28,16 @@
                 <ul class="gnavMenu">
                     <li class="gnavMenuItem"><a href="index.html">TOP</a></li>
                     <li class="gnavMenuItem"><a href="">概要</a></li>
-                    <li class="gnavMenuItem"><a href="">目次</a></li>
                     <li class="gnavMenuItem gnavMenuItemLower"><a href="zenkoji.html">善光寺</a></li>
-                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">戸隠神社奥社</a></li>
-                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">上田城跡公園</a></li>
-                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">軽井沢アウトレット</a></li>
-                    <li class="gnavMenuItem gnavMenuItemLower"><a href="">長野駅</a></li>
+                    <li class="gnavMenuItem gnavMenuItemLower"><a href="togakushi.html">戸隠神社奥社</a></li>
+                    <li class="gnavMenuItem gnavMenuItemLower"><a href="ueda.html">上田城跡公園</a></li>
+                    <li class="gnavMenuItem gnavMenuItemLower"><a href="karuizawa.html">軽井沢アウトレット</a></li>
+                    <li class="gnavMenuItem gnavMenuItemLower"><a href="naganoeki.html">長野駅</a></li>
                 </ul>
             </div><!--gnav-wrap-->
         </nav>
         <p class="titleImgWrap">
-            <img src="image/zenkoji/top.png" alt="" class="titleImg">
+            <img src="image/zenkoji/top.jpg" alt="" class="titleImg">
             <img src="image/zenkoji/zenkojiLogoW.png" alt="" class="titleLogoImg">
         </p>
     </section>
@@ -47,11 +47,11 @@
             <h1>360°動画</h1>
             <div class="youtubeWrap">
                 <div class="youtube">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/Zg3SRhgGHGM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IH4ViQvsnZw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="movieTextWrap">
-                <img src="image/zenkoji/zenkojiQr.png" alt="">
+                <img src="image/zenkoji/qr.png" alt="">
                 <p><span>&larr;</span>スマホからご覧になる場合はこちらから</p>
             </div>
         </div>
@@ -75,7 +75,7 @@
                 善光寺聖の勧進や出開帳などによって、江戸時代末には「一生に一度は善光寺詣り」と言われるようになった。<br>
                 今日では御開帳が行われる丑年と未年に、より多くの参拝者が訪れる。</p>
                 <h2>有名なもの</h2>
-                <p><span>善光寺前立本尊御開帳（ぜんこうじまえだちほんぞんごかいちょう</span><br>
+                <p><span>善光寺前立本尊御開帳（ぜんこうじまえだちほんぞんごかいちょう）</span><br>
                 数え年で7年に一度（現在は丑と未の年）、秘仏である御本尊様のお身代わりとして、<br>
                 まったく同じお姿の「前立本尊」様を本堂にお遷しして全国の人々にお参りいただく盛儀です。<br>
                 4月から5月にかけて行われ、平成二十七年（2015年）の御開帳には707万人の方が参詣されました。<br>
@@ -115,7 +115,7 @@
         window.addEventListener('load', onVrViewLoad);
         function onVrViewLoad() {
             var vrView = new VRView.Player('#vrview', {
-                image: 'image/zenkoji/zenkojiFlat.jpg', //画像を埋め込みたい場合。値にパスを指定。
+                image: 'image/zenkoji/flat.jpg', //画像を埋め込みたい場合。値にパスを指定。
                 width: '100%', //コンテンツの幅を指定。
                 height: '100%', //コンテンツの高さを指定。
             });
