--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/xah6ouf.css">
 </head>
 <body>
-    <video src="movie/top.mp4" autoplay playsinline muted loop></video>
+    <video src="movie/top.m4v" autoplay playsinline muted loop></video>
     <div class="layerHdrmov"></div>
     <section class="top">
         <div class="navBer">
