--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
         <div class="scrollBtn"><span></span><span></span><span></span>SCROLL</div>
     </section>
 
-    <section class="about indexSection">
+    <!--<section class="about indexSection">
         <div class="sectionContentWrap">
-		    <h1>概要</h1>
+		    <h1>About</h1>
 		    <p>このサイトは、長野に少しでも興味をもっていただくべく
             360°カメラを使って撮影した画像、映像を使って長野を紹介するサイトです。</p>
         </div>
-    </section>
+    </section>-->
 
     <section class="toc indexSection">
         <div class="sectionContentWrap">
-        <h1>目次</h1>
+        <h1>Contents</h1>
         <div class="cardContainerWrap">
         <div class="cardContainer">
 			<a href="zenkoji.html" class="cardWrap">
