--- a/index.html
+++ b/index.html
@@ -66,44 +66,56 @@
         <div class="cardContainer">
 			<a href="zenkoji.html" class="cardWrap">
 				<div class="card">
-					<img src="image/top/zenkojiToc.jpg" alt="#">
-					<h2>善光寺</h2>
-					<h3>Zenkoji Temple</h3>
+                    <img src="image/top/zenkojiToc.jpg" alt="#">
+                    <div>
+					    <h2>善光寺</h2>
+                        <h3>Zenkoji Temple</h3>
+                    </div>
 				</div>
             </a>
             <a href="togakushi.html" class="cardWrap">
 				<div class="card">
-					<img src="image/top/okusyaToc.jpg" alt="#">
-					<h2>戸隠神社奥社</h2>
-					<h3>Togakushi Shrine Okusha</h3>
+                    <img src="image/top/okusyaToc.jpg" alt="#">
+                    <div>
+					    <h2>戸隠神社奥社</h2>
+                        <h3>Togakushi Shrine Okusha</h3>
+                    </div>
 				</div>
 			</a>
 			<a href="ueda.html" class="cardWrap">
 				<div class="card">
-					<img src="image/top/uedaToc.jpg" alt="#">
-					<h2>上田城跡地公園</h2>
-					<h3>Uedajo Castle Site Park</h3>
+                    <img src="image/top/uedaToc.jpg" alt="#">
+                    <div>
+					    <h2>上田城跡地公園</h2>
+                        <h3>Uedajo Castle Site Park</h3>
+                    </div>
 				</div>
             </a>
             <a href="karuizawa.html" class="cardWrap">
 				<div class="card">
-					<img src="image/top/karuizawaToc.jpg" alt="#">
-					<h2>軽井沢アウトレット</h2>
-					<h3>Karuizawa Outlet</h3>
+                    <img src="image/top/karuizawaToc.jpg" alt="#">
+                    <div>
+					    <h2>軽井沢アウトレット</h2>
+                        <h3>Karuizawa Outlet</h3>
+                    </div>
 				</div>
             </a>
             <a href="naganoeki.html" class="cardWrap">
 				<div class="card">
-					<img src="image/top/naganoToc.jpg" alt="#">
-					<h2>長野駅</h2>
-					<h3>Nagano Station</h3>
+                    <img src="image/top/naganoToc.jpg" alt="#">
+                    <div>
+					    <h2>長野駅</h2>
+                        <h3>Nagano Station</h3>
+                    </div>
 				</div>
             </a>
             <a href="https://suzuri.jp/nagano360" class="cardWrap">
 				<div class="card">
-					<img src="image/top/goodsToc.jpg" alt="#">
-					<h2>nagano360 - 公式グッズ</h2>
-					<h3>official goods</h3>
+                    <img src="image/top/goodsToc.jpg" alt="#">
+                    <div>
+					    <h2>nagano360 - OfficialGoods</h2>
+                        <h3>外部サイトにジャンプします</h3>
+                    </div>
 				</div>
 			</a>
         </div>
